# openGL_II

./: CMakeLists.txt  build.sh
src/: config.cpp  config.hpp  factory.cpp  factory.hpp  glad.c  glad.h  linear_algebra.cpp  linear_algebra.hpp  main.cpp  material.cpp  material.hpp  triangle_mesh.cpp  triangle_mesh.hpp
src/components/: animation_component.hpp  camera_component.hpp  component_set.hpp  physics_component.hpp  render_component.hpp  transform_component.hpp
src/controller/: app.cpp  app.hpp
src/factories/: factory.cpp  factory.hpp  mesh_factory.cpp  mesh_factory.hpp  texture_factory.cpp  texture_factory.hpp
src/shaders/: frag.txt  fragment.txt  fragment_sky.txt  geometry_vertex.txt  vert.txt  vertex.txt  vertex_sky.txt
src/systems/: animation_system.cpp  animation_system.hpp  camera_system.cpp  camera_system.hpp  motion_system.cpp  motion_system.hpp  render_system.cpp  render_system.hpp
src/view/: shader.cpp  shader.hpp
